# ffischbach-events-api-rs

./: Cargo.toml  README.md  diesel.toml
src/: main.rs  schema.rs
src/models/: event.rs
src/services/: event.rs  mod.rs  openapi.rs
